[package]
name = "fbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
image = "0.24.5"
minifb = "0.24.0"
multicache = "0.6.1"
pixels = "0.11.0"
softbuffer = "0.2.0"
thiserror = "1.0.38"
winit = "0.28.2"
